# pythonTestProject

python/: Dockerfile
python/src/aula1/: exec1.py
python/src/aula10/: Dockerfile  docker-compose.yaml  pyproject.toml
python/src/aula10/api/: main.py
python/src/aula10/aula10/: main.py  modules.py  router.py
python/src/aula13/: Dockerfile  db.json  pyproject.toml
python/src/aula13/api/: clients.py  main.py  models.py  run.py
python/src/aula13/api/routes/: products.py
python/src/aula13/scripts/: fakedb.py
python/src/aula17/: docker-compose.yaml
python/src/aula17/src/: main.py
python/src/aula2/: exec2.py
python/src/aula3/: exec3.py  exec3v2.py  sleeper.py  test_exec3v2.py
python/src/aula4/: Dockerfile  Makefile  README.md  pyproject.toml
python/src/aula4/src/: main.py
python/src/aula6/: Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
python/src/aula6/src/: main.py
python/src/aula7/: Dockerfile  docker-compose.yaml
python/src/aula7,8,9/: Makefile  docker-compose.yaml  pyproject.toml
python/src/aula7,8,9/aula7/: main.py
python/src/aula7.2/: pyproject.toml
python/src/aula7/aula7/: clients.py  main.py  models.py
