[tool.poetry]
name = "aula4"
version = "0.1.0"
description = "Project Aula4"
authors = ["ricardoAlmeidaEtic <ricardo_almeida@eticalgarve.com>"]
packages = [
    { include = "src/*.py" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
main = "src.main:main"
readList = "src.main:readList"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
